removed Hub from QRebel name

--- a/src/main/resources/io/jenkins/plugins/qrebel/QRebelBuilder/help-apiKey.html
+++ b/src/main/resources/io/jenkins/plugins/qrebel/QRebelBuilder/help-apiKey.html
@@ -1,4 +1,4 @@
 <div>
-    Every QRebel Hub project has a unique API token for authentication. This token is required for all API calls.
+    Every QRebel project has a unique API token for authentication. This token is required for all API calls.
     To acquire the project’s API token, an administrator needs to enable API functionality for the project from the Settings section.
 </div>
