--- a/src/main/resources/io/jenkins/plugins/qrebel/QRebelBuilder/help-appName.html
+++ b/src/main/resources/io/jenkins/plugins/qrebel/QRebelBuilder/help-appName.html
@@ -1,3 +1,3 @@
 <div>
-Please specify name of your application. The name must be same as in QRebel Hub (case sensitive).
+Please specify name of your application. The name must be same as in QRebel (case sensitive).
 </div>
