--- a/src/main/resources/io/jenkins/plugins/qrebel/QRebelBuilder/help-serverUrl.html
+++ b/src/main/resources/io/jenkins/plugins/qrebel/QRebelBuilder/help-serverUrl.html
@@ -1,3 +1,3 @@
 <div>
-    QRebel server detects performance issues. This field specifies its URL. By default is used http//hub.qrebel.com.
+    QRebel server detects performance issues. This field specifies its URL. Default URL is https://hub.qrebel.com.
 </div>
