Threshold to SLA global limit

--- a/src/main/resources/io/jenkins/plugins/qrebel/QRebelPublisher/help-threshold.html
+++ b/src/main/resources/io/jenkins/plugins/qrebel/QRebelPublisher/help-threshold.html
@@ -1,5 +1,5 @@
 <div>
-    This is a global threshold limit value. If any of application endpoints exceed the value, the build will be marked
+    This is a SLA global limit (ms). If any of application endpoints exceed the value, the build will be marked
     as failed.
     Values are in ms -> 5000ms = 5 sec
     <p>0 means no limit</p>
