--- a/src/main/resources/io/jenkins/plugins/qrebel/QRebelPublisher/help-threshold.html
+++ b/src/main/resources/io/jenkins/plugins/qrebel/QRebelPublisher/help-threshold.html
@@ -1,6 +1,4 @@
 <div>
-    This is a SLA global limit (ms). If any of application endpoints exceed the value, the build will be marked
-    as failed.
-    Values are in ms -> 5000ms = 5 sec
+    This is a SLA global limit (ms). If at least one endpoint exeeds the limit, the build will be marked as a failure
     <p>0 means no limit</p>
 </div>
