--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/help-baselineBuild.html
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/help-baselineBuild.html
@@ -1,3 +1,3 @@
 <div>
-    Please specify a baseline build name for the comparison. API queries support only user-defined or custom build names.
+    Please specify a baseline build for which you want to use as the performance comparison point. Please note that you must specify a user-defined build name. Unnamed builds are not supported.
 </div>
