--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/help-targetVersion.html
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/help-targetVersion.html
@@ -1,3 +1,3 @@
 <div>
-    Please specify a target build version build for the query. This field is optional.
+    Please specify the target build version for which you want to validate performance. This field is optional and only relevant when you have setup named version names.
 </div>
