--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/help-baselineVersion.html
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/help-baselineVersion.html
@@ -1,3 +1,3 @@
 <div>
-    Please specify a baseline build version for the comparison. This field is optional.
+    Please specify a baseline build version for which you want to use as the performance comparison. This field is optional and only relevant when you have setup named version names.
 </div>
