--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/help-targetBuild.html
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/help-targetBuild.html
@@ -1,3 +1,3 @@
 <div>
-    Please specify a target build name for the comparison. API queries support only user-defined or custom build names.
+    Please specify the target build for which you want to validate performance. Please note that you must specify a user-defined build name. Unnamed builds are not supported.
 </div>
